fixes bug menu on mobile device

--- a/app/scss/components/_navigations.scss
+++ b/app/scss/components/_navigations.scss
@@ -46,6 +46,6 @@
     }
 
     &_open {
-        right: 0;
+        left: 0;
     }
 }
